After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786616 - color: manager's cancellable is not allocated
color: manager's cancellable is not allocated
Status: RESOLVED FIXED
Product: gnome-settings-daemon
Classification: Core
Component: color
unspecified
Other All
: Normal normal
: ---
Assigned To: Richard Hughes
gnome-settings-daemon-maint
Depends on:
Blocks:
 
 
Reported: 2017-08-22 15:38 UTC by Christian Kellner
Modified: 2017-08-22 17:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
color: initialize the manager's cancellable (1.02 KB, patch)
2017-08-22 15:38 UTC, Christian Kellner
committed Details | Review

Description Christian Kellner 2017-08-22 15:38:03 UTC
The infrastructure to use a GCancellable during g_bus_get is
present but the corresponding member bus_cancellable is never
allocated.
Comment 1 Christian Kellner 2017-08-22 15:38:07 UTC
Created attachment 358160 [details] [review]
color: initialize the manager's cancellable
Comment 2 Rui Matos 2017-08-22 16:21:25 UTC
Review of attachment 358160 [details] [review]:

oops. looks good, thanks
Comment 3 Rui Matos 2017-08-22 17:00:10 UTC
Attachment 358160 [details] pushed as fa1f9b7 - color: initialize the manager's cancellable