color: initialize the manager's cancellable

The infrastructure to use a GCancellable during g_bus_get is
present but the corresponding member bus_cancellable is never
allocated.

https://bugzilla.gnome.org/show_bug.cgi?id=786616